# eAbsentee

./: .gitattributes  .gitignore  CNAME  Dockerfile  LICENSE  Pipfile  README.md  app.py  buildPDF.py  build_pdf.py  campaigns.json  create_report.py  data.json  delete_applications.py  docker-compose.yml  email_bounceback.py  email_report.py  fcdc_functions.py  form.html  functions.py  index.html  localitiesAndReasons.py  localities_info.json  localities_info.py  main.py  package-lock.json  package.json  push.sh  pyproject.toml  registrars_email.json  requirements.txt  run.py  server.py  storage.json  temp.py  token.pickle
application/: app.py  config.py
e-absentee/: package.json
eAbsentee/: app.py  config.py
reports/: 08-28-19.xlsx  08-29-19.xlsx
scheduled_tasks/: append_to_reports.py  campaigns.json  create_maps.py  delete_applications.py  delete_emails.py  email_bounceback.py  email_registrars_introduction.py  email_report.py
scripts/: add_group_contact.py  add_to_database.py  add_to_local_database.py  backup_database.py  check_gmail_auth.py  count_applications.py  create_admin.py  delete_emails.py  download_as_csv.py  email_groups.py  email_tests.py  email_weekly.py  get_admin_emails.py  update_form_template.py
src/: App.js
static/: SBE-701-703.1-July 2020 version.docx  campaigns.json  groups.json  localities_info.json
templates/: 404.html  about.html  api.html  api_fcdc.html  banner.html  confirmation.html  credits.html  form.html  form_counties.html  form_fcdc.html  form_rodman.html  form_surovell.html  formclosed2.html  formerror.html  formnew.html  (+12 more)
(+96 files in other folders)
